ambari-serf-stack.yml
AWSTemplateFormatVersion: 2010-09-09
Description: CoreOS stack

# Mappings
# =================================================

Mappings:
  RegionMap:
    eu-west-1:
      ami: ami-a908cbde

# Parameters
# =================================================

Parameters:
  InstanceType:
    Description: "EC2 instance type (e.g. m1.small, c1.medium, ...)"
    Type: String
    Default: c3.large
    AllowedValues: [ t1.micro, m1.small, m3.medium, c3.large, m3.large, c3.xlarge, m3.xlarge, c3.2xlarge ]
    ConstraintDescription: Must be a valid EC2 instance type

  ClusterSize:
    Description: Number of nodes in your cluster (3-12)
    Type: Number
    Default: 3
    MinValue: 3
    MaxValue: 12

  AdvertisedIPAddress:
    Type: String
    Description: "Use 'private' if your etcd cluster is within one region or 'public' if it spans regions or cloud providers."
    Default: private
    AllowedValues: [ private, public ]

  AllowSSHFrom:
    Description: The net block (CIDR) that SSH is available to.
    Default: "0.0.0.0/0"
    Type: String

  KeyPair:
    Description: The name of an existing EC2 Key Pair to allow SSH access to the instance.
    Type: String

# Resources
# =================================================

Resources:

  CoreOSSecurityGroup:
    DependsOn: CoreOSELB
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: CoreOS SecurityGroup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp:
            Ref: AllowSSHFrom

        - FromPort: 8080
          ToPort: 8080
          IpProtocol: tcp
          CidrIp:
                Ref: AllowSSHFrom

  Ingress4001:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupName:
        Ref: CoreOSSecurityGroup
      IpProtocol: tcp
      FromPort: 4001
      ToPort: 4001
      SourceSecurityGroupId:
        "Fn::GetAtt":
          - CoreOSSecurityGroup
          - GroupId

  Ingress7001:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupName:
        Ref: CoreOSSecurityGroup
      IpProtocol: tcp
      FromPort: 7001
      ToPort: 7001
      SourceSecurityGroupId:
        "Fn::GetAtt":
          - CoreOSSecurityGroup
          - GroupId

  IngressApps:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupName:
        Ref: CoreOSSecurityGroup
      IpProtocol: tcp
      FromPort: 5000
      ToPort: 6000
      SourceSecurityGroupId:
        "Fn::GetAtt":
          - CoreOSSecurityGroup
          - GroupId

  CoreOSServerAutoScale:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones:
        "Fn::GetAZs":
          Ref: "AWS::Region"
      LaunchConfigurationName:
        Ref: CoreOSServerLaunchConfig
      MinSize: 2
      MaxSize: 12
      DesiredCapacity:
        Ref: ClusterSize
      LoadBalancerNames:
        - Ref: CoreOSELB
      Tags:
        - Key: Name
          Value:
            Ref: "AWS::StackName"
          PropagateAtLaunch: true

  CoreOSServerLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId:
        "Fn::FindInMap":
          - RegionMap
          - Ref: AWS::Region
          - ami
      InstanceType:
        Ref: InstanceType
      KeyName:
        Ref: KeyPair
      SecurityGroups:
        - Ref: CoreOSSecurityGroup
      UserData:
        "Fn::Base64":
          "Fn::Join":
            - ""
            -
              - "#cloud-config\n\n"
              - "coreos:\n"
              - "  etcd:\n"
              - "    discovery: "
              - Ref: DiscoveryURL
              - "\n"
              - "    addr: $"
              - Ref: AdvertisedIPAddress
              - "_ipv4:4001\n"
              - "    peer-addr: $"
              - Ref: AdvertisedIPAddress
              - "_ipv4:7001\n"
              - "  units:\n"
              - "    - name: etcd.service\n"
              - "      command: start\n"
              - "    - name: fleet.service\n"
              - "      command: start\n"


# Outputs
# =================================================

Outputs:
  AccessKeyId:
    Description: AWS AccessKeyId for the coreos IAM user
    Value:
      Ref: CoreOSAccessKey

  SecretAccessKey:
    Description: AWS SecretAccessKey for the coreos IAM user
    Value:
      "Fn::GetAtt":
        - CoreOSAccessKey
        - SecretAccessKey
